nginx tweak for https redirect from any http

--- a/example.env
+++ b/example.env
@@ -15,8 +15,8 @@ ENABLE_SIGNUP=true
 WEBUI_URL=https://ai.junder.uk
 
 # Default Admin User (created on first startup)
-DEFAULT_USER_EMAIL=admin@junder.uk
-DEFAULT_USER_NAME=Admin
+DEFAULT_USER_EMAIL=j@junder.uk
+DEFAULT_USER_NAME=jai
 DEFAULT_USER_PASSWORD=admin123
 
 # Note: IP whitelisting is configured directly in nginx/nginx.conf
