--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Cloudflare SSL termination with IP whitelisting
+# nginx/nginx.conf - Cloudflare SSL termination with HTTP to HTTPS redirect
 user nginx;
 worker_processes auto;
 pid /var/run/nginx.pid;
@@ -101,42 +101,28 @@ http {
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
 
-    # Rate Limiting Zones - UPDATED
-    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=150r/m;  # Increased from 30 to 150
+    # Rate Limiting Zones
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=150r/m;
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=60r/m;
     limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=10r/m;
-    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/m;  # 1 request per minute for wrong subdomain
+    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/m;
 
     # IP Whitelisting Configuration
-    # ALLOW ALL - Current setting
     geo $allowed_ip {
         default 1;  # Allow all IPs
     }
-    
-    # RESTRICT ACCESS - Uncomment and modify the block below to enable IP restrictions:
-    # geo $allowed_ip {
-    #     default 0;                      # Deny all by default
-    #     127.0.0.1/32 1;               # Allow localhost
-    #     192.168.0.0/16 1;             # Allow private network 192.168.x.x
-    #     10.0.0.0/8 1;                 # Allow private network 10.x.x.x
-    #     172.16.0.0/12 1;              # Allow private network 172.16-31.x.x
-    #     YOUR_PUBLIC_IP/32 1;          # Replace with your specific public IP
-    #     YOUR_OFFICE_SUBNET/24 1;      # Replace with your office subnet
-    # }
 
-    # Default server blocks for invalid domains
+    # HTTP Redirect Server Block for all HTTP traffic
     server {
-        listen 80 default_server;
-        listen 443 default_server;
-        server_name _;
+        listen 80;
+        server_name ai.junder.uk *.junder.uk;
         
-        # Return error page for any domain that's not ai.junder.uk
-        location / {
-            return 444; # Close connection without response
-        }
+        # Redirect all HTTP traffic to HTTPS
+        # Uses $http_host to preserve original host (including port if needed)
+        return 301 https://$http_host$request_uri;
     }
 
-    # Main server block for ai.junder.uk (HTTP and HTTPS)
+    # Main server block for ai.junder.uk (both HTTP and HTTPS)
     server {
         listen 80;
         listen 443;
@@ -147,9 +133,15 @@ http {
             return 403;
         }
 
-        # Main application proxy to Open WebUI (HTTP/HTTPS to HTTP)
+        # Redirect HTTP to HTTPS if not already HTTPS
+        # This handles cases where someone might access via HTTP
+        if ($scheme = http) {
+            return 301 https://$http_host$request_uri;
+        }
+
+        # Main application proxy to Open WebUI
         location / {
-            limit_req zone=general_limit burst=100 nodelay;  # UPDATED: Increased burst
+            limit_req zone=general_limit burst=100 nodelay;
             
             proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
@@ -170,7 +162,7 @@ http {
             proxy_buffering off;
         }
 
-        # API endpoints with higher rate limits (HTTP/HTTPS to HTTP)
+        # API endpoints with higher rate limits
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
             
@@ -188,7 +180,7 @@ http {
             proxy_buffering off;
         }
 
-        # File upload endpoints with special limits (HTTP/HTTPS to HTTP)
+        # File upload endpoints with special limits
         location /api/upload {
             limit_req zone=upload_limit burst=5 nodelay;
             
@@ -209,7 +201,7 @@ http {
             client_max_body_size 1G;
         }
 
-        # Health check endpoint (HTTP/HTTPS to HTTP)
+        # Health check endpoint
         location /health {
             access_log off;
             proxy_pass http://open-webui:8080/health;
@@ -227,7 +219,7 @@ http {
         }
     }
 
-    # Error server blocks for other junder.uk subdomains (HTTP and HTTPS)
+    # Error server blocks for other junder.uk subdomains
     server {
         listen 80;
         listen 443;
@@ -236,6 +228,11 @@ http {
         # IP Access Control - Return 403 for blocked IPs
         if ($allowed_ip = 0) {
             return 403;
+        }
+        
+        # Redirect HTTP to HTTPS for other subdomains
+        if ($scheme = http) {
+            return 301 https://$http_host$request_uri;
         }
         
         # Serve error page for wrong subdomain with rate limiting
