--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Cloudflare SSL termination with HTTP to HTTPS redirect
+# nginx/nginx.conf - Selective HTTPS Redirection for Root Domain
 user nginx;
 worker_processes auto;
 pid /var/run/nginx.pid;
@@ -112,16 +112,6 @@ http {
         default 1;  # Allow all IPs
     }
 
-    # HTTP Redirect Server Block for all HTTP traffic
-    server {
-        listen 80;
-        server_name ai.junder.uk *.junder.uk;
-        
-        # Redirect all HTTP traffic to HTTPS
-        # Uses $http_host to preserve original host (including port if needed)
-        return 301 https://$http_host$request_uri;
-    }
-
     # Main server block for ai.junder.uk (both HTTP and HTTPS)
     server {
         listen 80;
@@ -133,10 +123,9 @@ http {
             return 403;
         }
 
-        # Redirect HTTP to HTTPS if not already HTTPS
-        # This handles cases where someone might access via HTTP
+        # Redirect only root domain (/) from HTTP to HTTPS
         if ($scheme = http) {
-            return 301 https://$http_host$request_uri;
+            rewrite ^/$ https://$http_host$request_uri permanent;
         }
 
         # Main application proxy to Open WebUI
@@ -228,11 +217,6 @@ http {
         # IP Access Control - Return 403 for blocked IPs
         if ($allowed_ip = 0) {
             return 403;
-        }
-        
-        # Redirect HTTP to HTTPS for other subdomains
-        if ($scheme = http) {
-            return 301 https://$http_host$request_uri;
         }
         
         # Serve error page for wrong subdomain with rate limiting
