--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     build: ./nginx
     container_name: ai-nginx
     ports:
-      - "80:80"
+      # Only map port 443
       - "443:443"
     depends_on:
       - open-webui
