--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Selective HTTPS Redirection for Root Domain
+# nginx/nginx.conf - HTTPS-only configuration with Cloudflare SSL
 user nginx;
 worker_processes auto;
 pid /var/run/nginx.pid;
@@ -112,20 +112,33 @@ http {
         default 1;  # Allow all IPs
     }
 
-    # Main server block for ai.junder.uk (both HTTP and HTTPS)
+    # Main server block for ai.junder.uk (HTTPS only)
     server {
-        listen 80;
-        listen 443;
+        listen 443 ssl;
         server_name ai.junder.uk;
+        
+        # SSL Certificate Configuration
+        # Note: Replace these with your actual SSL certificate paths from Cloudflare
+        ssl_certificate /etc/nginx/ssl/ai.junder.uk.crt;
+        ssl_certificate_key /etc/nginx/ssl/ai.junder.uk.key;
+        
+        # SSL Optimization
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_session_tickets off;
+        
+        # Modern SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+        
+        # OCSP Stapling
+        ssl_stapling on;
+        ssl_stapling_verify on;
         
         # IP Access Control - Return 403 for blocked IPs
         if ($allowed_ip = 0) {
             return 403;
-        }
-
-        # Redirect only root domain (/) from HTTP to HTTPS
-        if ($scheme = http) {
-            rewrite ^/$ https://$http_host$request_uri permanent;
         }
 
         # Main application proxy to Open WebUI
@@ -210,9 +223,23 @@ http {
 
     # Error server blocks for other junder.uk subdomains
     server {
-        listen 80;
-        listen 443;
+        listen 443 ssl;
         server_name *.junder.uk;
+        
+        # SSL Certificate Configuration
+        # Note: Replace these with your actual SSL certificate paths from Cloudflare
+        ssl_certificate /etc/nginx/ssl/junder.uk.crt;
+        ssl_certificate_key /etc/nginx/ssl/junder.uk.key;
+        
+        # SSL Optimization (same as main server block)
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_session_tickets off;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+        ssl_stapling on;
+        ssl_stapling_verify on;
         
         # IP Access Control - Return 403 for blocked IPs
         if ($allowed_ip = 0) {
