--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - HTTPS-only configuration with Cloudflare SSL
+# nginx/nginx.conf - Cloudflare Reverse Proxy Configuration
 user nginx;
 worker_processes auto;
 pid /var/run/nginx.pid;
@@ -14,7 +14,7 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Log format with real IP (Cloudflare passes real IP in CF-Connecting-IP header)
+    # Log format with real IP from Cloudflare headers
     log_format main '$http_cf_connecting_ip - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for" '
@@ -22,6 +22,30 @@ http {
                     'uht="$upstream_header_time" urt="$upstream_response_time"';
     
     access_log /var/log/nginx/access.log main;
+
+    # GZIP Configuration - RESTORED
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_min_length 256;
+    gzip_types
+        application/atom+xml
+        application/javascript
+        application/json
+        application/rss+xml
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        application/x-web-app-manifest+json
+        application/xhtml+xml
+        application/xml
+        font/opentype
+        image/svg+xml
+        image/x-icon
+        text/css
+        text/plain
+        text/x-component
+        text/xml;
 
     # Basic settings
     sendfile on;
@@ -48,12 +72,8 @@ http {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $http_cf_connecting_ip;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Host $server_name;
-
-    # Trust Cloudflare IPs for real IP detection
+    
+    # Cloudflare IP and Protocol Detection
     set_real_ip_from 103.21.244.0/22;
     set_real_ip_from 103.22.200.0/22;
     set_real_ip_from 103.31.4.0/22;
@@ -78,22 +98,6 @@ http {
     set_real_ip_from 2a06:98c0::/29;
     real_ip_header CF-Connecting-IP;
 
-    # GZIP Configuration
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 256;
-    gzip_comp_level 6;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/javascript
-        application/json
-        application/xml+rss
-        application/atom+xml
-        image/svg+xml;
-
     # Security Headers
     add_header X-Frame-Options DENY always;
     add_header X-Content-Type-Options nosniff always;
@@ -105,39 +109,19 @@ http {
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=150r/m;
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=60r/m;
     limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=10r/m;
-    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/m;
 
-    # IP Whitelisting Configuration
-    geo $allowed_ip {
-        default 1;  # Allow all IPs
-    }
-
-    # Main server block for ai.junder.uk (HTTPS only)
+    # Main server block for ai.junder.uk
     server {
-        listen 443 ssl;
+        listen 80;
         server_name ai.junder.uk;
-        
-        # SSL Certificate Configuration
-        # Note: Replace these with your actual SSL certificate paths from Cloudflare
-        ssl_certificate /etc/nginx/ssl/ai.junder.uk.crt;
-        ssl_certificate_key /etc/nginx/ssl/ai.junder.uk.key;
-        
-        # SSL Optimization
-        ssl_session_timeout 1d;
-        ssl_session_cache shared:SSL:50m;
-        ssl_session_tickets off;
-        
-        # Modern SSL configuration
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-        ssl_prefer_server_ciphers off;
-        
-        # OCSP Stapling
-        ssl_stapling on;
-        ssl_stapling_verify on;
-        
-        # IP Access Control - Return 403 for blocked IPs
-        if ($allowed_ip = 0) {
+
+        # Only allow requests from Cloudflare HTTPS
+        if ($http_cf_visitor !~ '{"scheme":"https"}') {
+            return 403;
+        }
+
+        # Strict HTTPS header checks
+        if ($http_x_forwarded_proto != "https") {
             return 403;
         }
 
@@ -146,11 +130,12 @@ http {
             limit_req zone=general_limit burst=100 nodelay;
             
             proxy_pass http://open-webui:8080;
+            
+            # Cloudflare-specific headers
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $server_name;
+            proxy_set_header X-Forwarded-For $http_cf_connecting_ip;
+            proxy_set_header X-Forwarded-Proto https;
             
             # WebSocket support
             proxy_http_version 1.1;
@@ -171,9 +156,8 @@ http {
             proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $server_name;
+            proxy_set_header X-Forwarded-For $http_cf_connecting_ip;
+            proxy_set_header X-Forwarded-Proto https;
             
             # Extended timeouts for AI model inference
             proxy_connect_timeout 60s;
@@ -189,9 +173,8 @@ http {
             proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $server_name;
+            proxy_set_header X-Forwarded-For $http_cf_connecting_ip;
+            proxy_set_header X-Forwarded-Proto https;
             
             # Increased timeouts for file uploads
             proxy_connect_timeout 300s;
@@ -201,71 +184,6 @@ http {
             
             # Allow large file uploads
             client_max_body_size 1G;
-        }
-
-        # Health check endpoint
-        location /health {
-            access_log off;
-            proxy_pass http://open-webui:8080/health;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Block access to sensitive paths
-        location ~ /\. {
-            deny all;
-            access_log off;
-            log_not_found off;
-        }
-    }
-
-    # Error server blocks for other junder.uk subdomains
-    server {
-        listen 443 ssl;
-        server_name *.junder.uk;
-        
-        # SSL Certificate Configuration
-        # Note: Replace these with your actual SSL certificate paths from Cloudflare
-        ssl_certificate /etc/nginx/ssl/junder.uk.crt;
-        ssl_certificate_key /etc/nginx/ssl/junder.uk.key;
-        
-        # SSL Optimization (same as main server block)
-        ssl_session_timeout 1d;
-        ssl_session_cache shared:SSL:50m;
-        ssl_session_tickets off;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-        ssl_prefer_server_ciphers off;
-        ssl_stapling on;
-        ssl_stapling_verify on;
-        
-        # IP Access Control - Return 403 for blocked IPs
-        if ($allowed_ip = 0) {
-            return 403;
-        }
-        
-        # Serve error page for wrong subdomain with rate limiting
-        location / {
-            limit_req zone=wrong_subdomain burst=1 nodelay;
-            limit_req_status 429;
-            
-            root /usr/share/nginx/html;
-            try_files /wrong-subdomain.html =404;
-            add_header Content-Type text/html;
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
-        }
-        
-        # Custom error page for rate limited requests
-        error_page 429 /rate-limited.html;
-        location = /rate-limited.html {
-            root /usr/share/nginx/html;
-            internal;
-            add_header Content-Type text/html;
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
     }
 }
