--- a/example.env
+++ b/example.env
@@ -28,7 +28,7 @@ DEFAULT_USER_PASSWORD=admin123
 # ADVANCED PERFORMANCE SETTINGS
 # Concurrent request handling
 OLLAMA_NUM_PARALLEL=4                      # Handle 4 requests simultaneously
-OLLAMA_MAX_LOADED_MODELS=2                 # Keep 2 models in memory
+OLLAMA_MAX_LOADED_MODELS=1                 # Keep 1 model in memory
 OLLAMA_MAX_QUEUE=20                        # Queue depth
 
 # Model loading and retention
