--- a/example.env
+++ b/example.env
@@ -23,7 +23,7 @@ DEFAULT_USER_PASSWORD=admin123
 
 # STORAGE OPTIMIZATION
 # Set to SSD path for better I/O performance (optional)
-# OLLAMA_DATA_PATH=/path/to/fast/ssd/ollama_data
+OLLAMA_DATA_PATH=/mnt/nvme/ollama_data
 
 # ADVANCED PERFORMANCE SETTINGS
 # Concurrent request handling
