--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Cloudflare Reverse Proxy Configuration
+# nginx/nginx.conf - Cloudflare SSL termination with IP whitelisting
 user nginx;
 worker_processes auto;
 pid /var/run/nginx.pid;
@@ -14,7 +14,7 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Log format with real IP from Cloudflare headers
+    # Log format with real IP (Cloudflare passes real IP in CF-Connecting-IP header)
     log_format main '$http_cf_connecting_ip - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for" '
@@ -22,30 +22,6 @@ http {
                     'uht="$upstream_header_time" urt="$upstream_response_time"';
     
     access_log /var/log/nginx/access.log main;
-
-    # GZIP Configuration - RESTORED
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_min_length 256;
-    gzip_types
-        application/atom+xml
-        application/javascript
-        application/json
-        application/rss+xml
-        application/vnd.ms-fontobject
-        application/x-font-ttf
-        application/x-web-app-manifest+json
-        application/xhtml+xml
-        application/xml
-        font/opentype
-        image/svg+xml
-        image/x-icon
-        text/css
-        text/plain
-        text/x-component
-        text/xml;
 
     # Basic settings
     sendfile on;
@@ -72,8 +48,12 @@ http {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_set_header Host $host;
-    
-    # Cloudflare IP and Protocol Detection
+    proxy_set_header X-Real-IP $http_cf_connecting_ip;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $server_name;
+
+    # Trust Cloudflare IPs for real IP detection
     set_real_ip_from 103.21.244.0/22;
     set_real_ip_from 103.22.200.0/22;
     set_real_ip_from 103.31.4.0/22;
@@ -98,6 +78,22 @@ http {
     set_real_ip_from 2a06:98c0::/29;
     real_ip_header CF-Connecting-IP;
 
+    # GZIP Configuration
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 256;
+    gzip_comp_level 6;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/javascript
+        application/json
+        application/xml+rss
+        application/atom+xml
+        image/svg+xml;
+
     # Security Headers
     add_header X-Frame-Options DENY always;
     add_header X-Content-Type-Options nosniff always;
@@ -106,36 +102,68 @@ http {
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
 
     # Rate Limiting Zones
-    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=150r/m;
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/m;
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=60r/m;
     limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=10r/m;
+    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/m;  # 1 request per minute for wrong subdomain
+
+    # IP Whitelisting Configuration
+    # ALLOW ALL - Current setting
+    geo $allowed_ip {
+        default 1;  # Allow all IPs
+    }
+    
+    # RESTRICT ACCESS - Uncomment and modify the block below to enable IP restrictions:
+    # geo $allowed_ip {
+    #     default 0;                      # Deny all by default
+    #     127.0.0.1/32 1;               # Allow localhost
+    #     192.168.0.0/16 1;             # Allow private network 192.168.x.x
+    #     10.0.0.0/8 1;                 # Allow private network 10.x.x.x
+    #     172.16.0.0/12 1;              # Allow private network 172.16-31.x.x
+    #     YOUR_PUBLIC_IP/32 1;          # Replace with your specific public IP
+    #     YOUR_OFFICE_SUBNET/24 1;      # Replace with your office subnet
+    # }
+    #
+    # Examples for single IPs:
+    # 203.0.113.42/32 1;              # Allow specific IP
+    # 198.51.100.0/24 1;              # Allow entire subnet
+    #
+    # Common private networks:
+    # 192.168.1.0/24 1;               # Typical home network
+    # 10.0.0.0/24 1;                  # Docker default network
+    # 172.17.0.0/16 1;                # Docker bridge networks
+
+    # Default server block for invalid domains
+    server {
+        listen 80 default_server;
+        server_name _;
+        
+        # Return error page for any domain that's not ai.junder.uk
+        location / {
+            return 444; # Close connection without response
+        }
+    }
 
     # Main server block for ai.junder.uk
     server {
         listen 80;
         server_name ai.junder.uk;
-
-        # Only allow requests from Cloudflare HTTPS
-        if ($http_cf_visitor !~ '{"scheme":"https"}') {
-            return 403;
-        }
-
-        # Strict HTTPS header checks
-        if ($http_x_forwarded_proto != "https") {
+        
+        # IP Access Control - Return 403 for blocked IPs
+        if ($allowed_ip = 0) {
             return 403;
         }
 
         # Main application proxy to Open WebUI
         location / {
-            limit_req zone=general_limit burst=100 nodelay;
+            limit_req zone=general_limit burst=10 nodelay;
             
             proxy_pass http://open-webui:8080;
-            
-            # Cloudflare-specific headers
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-For $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Host $server_name;
             
             # WebSocket support
             proxy_http_version 1.1;
@@ -156,8 +184,9 @@ http {
             proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-For $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Host $server_name;
             
             # Extended timeouts for AI model inference
             proxy_connect_timeout 60s;
@@ -173,8 +202,9 @@ http {
             proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-For $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Host $server_name;
             
             # Increased timeouts for file uploads
             proxy_connect_timeout 300s;
@@ -184,6 +214,56 @@ http {
             
             # Allow large file uploads
             client_max_body_size 1G;
+        }
+
+        # Health check endpoint (no rate limiting)
+        location /health {
+            access_log off;
+            proxy_pass http://open-webui:8080/health;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $http_cf_connecting_ip;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        }
+
+        # Block access to sensitive paths
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+    }
+
+    # Error server block for other junder.uk subdomains
+    server {
+        listen 80;
+        server_name *.junder.uk;
+        
+        # IP Access Control - Return 403 for blocked IPs
+        if ($allowed_ip = 0) {
+            return 403;
+        }
+        
+        # Serve error page for wrong subdomain with rate limiting
+        location / {
+            limit_req zone=wrong_subdomain burst=1 nodelay;
+            limit_req_status 429;
+            
+            root /usr/share/nginx/html;
+            try_files /wrong-subdomain.html =404;
+            add_header Content-Type text/html;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
+        
+        # Custom error page for rate limited requests
+        error_page 429 /rate-limited.html;
+        location = /rate-limited.html {
+            root /usr/share/nginx/html;
+            internal;
+            add_header Content-Type text/html;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
     }
 }
