--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -105,7 +105,8 @@ http {
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/m;
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=60r/m;
     limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=10r/m;
-    limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=5r/m;       # 5 requests per minute for auth endpoints
+    limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=3r/m;       # 3 requests per minute for auth endpoints
+    limit_req_zone $binary_remote_addr zone=auth_strict:10m rate=1r/m;      # 1 request per minute for signin/signup
     limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/m;  # 1 request per minute for wrong subdomain
 
     # IP Whitelisting Configuration
@@ -179,8 +180,26 @@ http {
         }
 
         # Authentication endpoints with strict rate limiting
-        location /auth {
+        location ~ ^/(auth|api/v1/auths) {
             limit_req zone=auth_limit burst=2 nodelay;
+            limit_req_status 429;
+            
+            proxy_pass http://open-webui:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $http_cf_connecting_ip;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Host $server_name;
+            
+            # Standard timeouts for auth
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+        
+        # Specific auth API endpoints with even stricter limits
+        location ~ ^/api/v1/auths/(signin|signup|refresh) {
+            limit_req zone=auth_strict burst=1 nodelay;
             limit_req_status 429;
             
             proxy_pass http://open-webui:8080;
