--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -183,6 +183,7 @@ http {
         location ~ ^/(auth|api/v1/auths) {
             limit_req zone=auth_limit burst=2 nodelay;
             limit_req_status 429;
+            error_page 429 /rate-limited.html;
             
             proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
@@ -201,6 +202,7 @@ http {
         location ~ ^/api/v1/auths/(signin|signup|refresh) {
             limit_req zone=auth_strict burst=1 nodelay;
             limit_req_status 429;
+            error_page 429 /rate-limited.html;
             
             proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
