--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -179,27 +179,8 @@ http {
             proxy_buffering off;
         }
 
-        # Authentication page with strict rate limiting  
-        location /auth {
-            limit_req zone=auth_strict burst=2 nodelay;
-            limit_req_status 429;
-            error_page 429 /rate-limited.html;
-            
-            proxy_pass http://open-webui:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $http_cf_connecting_ip;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-            proxy_set_header X-Forwarded-Host $server_name;
-            
-            # Standard timeouts for auth
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-        }
-
-        # All authentication API endpoints with strict rate limiting
-        location ~ ^/api/v1/auths {
+        # Authentication endpoints with strict rate limiting
+        location ~ ^/(auth|api/v1/auths) {
             limit_req zone=auth_limit burst=2 nodelay;
             limit_req_status 429;
             error_page 429 /rate-limited.html;
@@ -218,8 +199,8 @@ http {
         }
         
         # Specific auth API endpoints with even stricter limits
-        location ~ ^/api/v1/auths/(signin|signup|refresh|token) {
-            limit_req zone=auth_strict burst=0 nodelay;
+        location ~ ^/api/v1/auths/(signin|signup|refresh) {
+            limit_req zone=auth_strict burst=1 nodelay;
             limit_req_status 429;
             error_page 429 /rate-limited.html;
             
