--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,54 +4,67 @@ services:
     image: ghcr.io/open-webui/open-webui:ollama
     container_name: ai-open-webui-ollama
     environment:
-      - NVIDIA_VISIBLE_DEVICES=all
-      - WEBUI_SECRET_KEY=${SECRET_KEY:-your-secret-key-change-this}
+      # GPU Configuration
+      - NVIDIA_VISIBLE_DEVICES=${NVIDIA_VISIBLE_DEVICES}
+      - CUDA_VISIBLE_DEVICES=0
+      - CUDA_DEVICE_ORDER=PCI_BUS_ID
+      
+      # Security & Authentication
+      - WEBUI_SECRET_KEY=${SECRET_KEY}
       - WEBUI_AUTH=true
       - DEFAULT_USER_ROLE=user
-      - ENABLE_SIGNUP=${ENABLE_SIGNUP:-true}
+      - ENABLE_SIGNUP=${ENABLE_SIGNUP}
       - ENABLE_LOGIN_FORM=true
+      
       # Default admin user configuration
-      - DEFAULT_USER_EMAIL=${DEFAULT_USER_EMAIL:-j@junder.uk}
-      - DEFAULT_USER_NAME=${DEFAULT_USER_NAME:-jai}
-      - DEFAULT_USER_PASSWORD=${DEFAULT_USER_PASSWORD:-admin123}
+      - DEFAULT_USER_EMAIL=${DEFAULT_USER_EMAIL}
+      - DEFAULT_USER_NAME=${DEFAULT_USER_NAME}
+      - DEFAULT_USER_PASSWORD=${DEFAULT_USER_PASSWORD}
+      
       # CORS Configuration for production
-      - CORS_ALLOW_ORIGIN=${WEBUI_URL:-https://ai.junder.uk}
-      # Open WebUI URL configuration
-      - WEBUI_URL=${WEBUI_URL:-https://ai.junder.uk}
+      - CORS_ALLOW_ORIGIN=${WEBUI_URL}
+      - WEBUI_URL=${WEBUI_URL}
+      
       # Suppress warnings
       - USER_AGENT=Open-WebUI/1.0 (ai.junder.uk)
       - LANGCHAIN_TRACING_V2=false
       
       # OLLAMA PERFORMANCE OPTIMIZATIONS
-      - OLLAMA_NUM_PARALLEL=4                    # Allow 4 concurrent requests
-      - OLLAMA_MAX_LOADED_MODELS=1               # Keep 1 models in memory
-      - OLLAMA_MAX_QUEUE=20                      # Queue up to 20 requests
-      - OLLAMA_FLASH_ATTENTION=1                 # Enable flash attention (if supported)
-      - OLLAMA_HOST=0.0.0.0:11434               # Bind to all interfaces
-      - OLLAMA_KEEP_ALIVE=30m                    # Keep models loaded for 30 minutes
-      - OLLAMA_NOHISTORY=false                   # Enable context history
+      - OLLAMA_NUM_PARALLEL=${OLLAMA_NUM_PARALLEL}
+      - OLLAMA_MAX_LOADED_MODELS=${OLLAMA_MAX_LOADED_MODELS}
+      - OLLAMA_MAX_QUEUE=${OLLAMA_MAX_QUEUE}
+      - OLLAMA_FLASH_ATTENTION=${OLLAMA_FLASH_ATTENTION}
+      - OLLAMA_HOST=0.0.0.0:11434
+      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE}
+      - OLLAMA_NOHISTORY=false
+      - OLLAMA_LOAD_TIMEOUT=${OLLAMA_LOAD_TIMEOUT}
+      - OLLAMA_REQUEST_TIMEOUT=${OLLAMA_REQUEST_TIMEOUT}
+      - OLLAMA_MAX_VRAM=${MAX_VRAM}
+      
+      # ADVANCED PERFORMANCE SETTINGS
+      - OLLAMA_CONTEXT_SIZE=${OLLAMA_CONTEXT_SIZE}
+      - OLLAMA_BATCH_SIZE=${OLLAMA_BATCH_SIZE}
+      - OLLAMA_LOW_VRAM=${OLLAMA_LOW_VRAM}
+      - OLLAMA_GPU_LAYERS=${OLLAMA_GPU_LAYERS}
+      - OLLAMA_MAIN_GPU=${OLLAMA_MAIN_GPU}
+      - OLLAMA_TENSOR_SPLIT=${OLLAMA_TENSOR_SPLIT}
+      - OLLAMA_PRELOAD_MODEL=${OLLAMA_PRELOAD_MODEL}
+      - OLLAMA_OFFLOAD_KQV=${OLLAMA_OFFLOAD_KQV}
       
       # CPU/THREADING OPTIMIZATIONS
-      - OMP_NUM_THREADS=10                       # Use all 10 CPU cores
-      - GOMP_CPU_AFFINITY=0-9                    # Pin to cores 0-9
-      - MKL_NUM_THREADS=10                       # Intel MKL threading
-      - OPENBLAS_NUM_THREADS=10                  # OpenBLAS threading
-      - VECLIB_MAXIMUM_THREADS=10                # Apple Accelerate (if applicable)
+      - OMP_NUM_THREADS=${OMP_NUM_THREADS}
+      - GOMP_CPU_AFFINITY=${GOMP_CPU_AFFINITY}
+      - MKL_NUM_THREADS=${OMP_NUM_THREADS}
+      - OPENBLAS_NUM_THREADS=${OMP_NUM_THREADS}
+      - VECLIB_MAXIMUM_THREADS=${OMP_NUM_THREADS}
       
       # MEMORY OPTIMIZATIONS
-      - CUDA_VISIBLE_DEVICES=0                   # Use first GPU
-      - CUDA_DEVICE_ORDER=PCI_BUS_ID            # Consistent GPU ordering
       - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:1024,garbage_collection_threshold:0.6
-      
-      # MODEL LOADING OPTIMIZATIONS
-      - OLLAMA_LOAD_TIMEOUT=600                  # 10 minutes to load large models
-      - OLLAMA_REQUEST_TIMEOUT=300               # 5 minutes for inference
-      - OLLAMA_MAX_VRAM=${MAX_VRAM:-7GB}         # Reserve 1GB VRAM for system
+      - MALLOC_ARENA_MAX=${MALLOC_ARENA_MAX}
       
       # PERFORMANCE TUNING
-      - OLLAMA_RUNNERS_DIR=/tmp/ollama_runners   # Use tmpfs for runners
-      - OLLAMA_TMPDIR=/tmp/ollama_tmp           # Temp directory
-      - MALLOC_ARENA_MAX=2                       # Reduce memory fragmentation
+      - OLLAMA_RUNNERS_DIR=/tmp/ollama_runners
+      - OLLAMA_TMPDIR=/tmp/ollama_tmp
       
     volumes:
       - ollama_data:/root/.ollama
@@ -60,33 +73,33 @@ services:
       - type: tmpfs
         target: /tmp/ollama_runners
         tmpfs:
-          size: 2G
+          size: 4G
       - type: tmpfs
         target: /tmp/ollama_tmp
         tmpfs:
-          size: 4G
+          size: 8G
     networks:
       - ai-network
     deploy:
       resources:
         limits:
-          cpus: '10.0'                           # Use all 10 cores
-          memory: 28G                            # Use 28GB RAM (leave 4GB for system)
+          cpus: '8.0'
+          memory: ${OLLAMA_MEMORY_LIMIT}
         reservations:
-          cpus: '8.0'                           # Reserve 8 cores minimum
-          memory: 20G                           # Reserve 20GB minimum
+          cpus: '6.0'
+          memory: ${OLLAMA_MEMORY_RESERVATION}
     runtime: nvidia
     restart: unless-stopped
     # No ports exposed - only accessible through NGINX
     expose:
       - "8080"
-      - "11434"                                 # Ollama API port for internal use
+      - "11434"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
-      timeout: 20s                             # Increased timeout for large models
+      timeout: 20s
       retries: 3
-      start_period: 300s                       # 5 minutes start period for model loading
+      start_period: 300s
     # CPU performance tuning
     sysctls:
       - net.core.somaxconn=65535
@@ -111,11 +124,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '2.0'                           # Increased for handling large responses
-          memory: 1G                            # Increased memory
+          cpus: '2.0'
+          memory: 4G
         reservations:
           cpus: '0.5'
-          memory: 512M
+          memory: 1G
     restart: unless-stopped
     # Optimize for large AI responses
     sysctls:
@@ -135,6 +148,6 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: ${OLLAMA_DATA_PATH:-./ollama_data}  # Allow custom path for SSD storage
+      device: ${OLLAMA_DATA_PATH:-./ollama_data}
   open_webui_data:
     driver: local
