--- a/example.env
+++ b/example.env
@@ -1,51 +1,64 @@
 # .env - High Performance Configuration for Open WebUI + Ollama
+# 10-core/32GB/8GB VRAM System Optimized for 24B parameter models
 
-# Security
+# ===== SECURITY =====
 SECRET_KEY=your-very-secret-key-change-this-in-production-make-it-long-and-random
 
-# PERFORMANCE OPTIMIZATIONS FOR 10-CORE/32GB/8GB VRAM SYSTEM
-# Resource Limits - Optimized for 24B parameter models
-OLLAMA_MEMORY_LIMIT=28G                    # Use 28GB of 32GB RAM
-OLLAMA_MEMORY_RESERVATION=20G              # Reserve 20GB minimum
-
-# GPU Configuration - RTX 3060 Ti Optimized
+# ===== GPU CONFIGURATION =====
 NVIDIA_VISIBLE_DEVICES=all
 MAX_VRAM=7GB                               # Reserve 1GB VRAM for system overhead
 
-# Open WebUI Configuration
+# ===== OPEN WEBUI CONFIGURATION =====
 ENABLE_SIGNUP=true
 WEBUI_URL=https://ai.junder.uk
 
-# Default Admin User
+# ===== DEFAULT ADMIN USER =====
 DEFAULT_USER_EMAIL=j@junder.uk
 DEFAULT_USER_NAME=jai
 DEFAULT_USER_PASSWORD=admin123
 
-# STORAGE OPTIMIZATION
+# ===== RESOURCE LIMITS =====
+# Memory Management - Optimized for 32GB RAM
+OLLAMA_MEMORY_LIMIT=28G                    # Use 28GB of 32GB RAM
+OLLAMA_MEMORY_RESERVATION=20G              # Reserve 20GB minimum
+
+# ===== STORAGE OPTIMIZATION =====
 # Set to SSD path for better I/O performance (optional)
 OLLAMA_DATA_PATH=/mnt/nvme/ollama_data
 
-# ADVANCED PERFORMANCE SETTINGS
-# Concurrent request handling
+# ===== OLLAMA PERFORMANCE SETTINGS =====
+# Concurrent Processing
 OLLAMA_NUM_PARALLEL=4                      # Handle 4 requests simultaneously
 OLLAMA_MAX_LOADED_MODELS=1                 # Keep 1 model in memory
-OLLAMA_MAX_QUEUE=20                        # Queue depth
+OLLAMA_MAX_QUEUE=20                        # Queue depth for incoming requests
 
-# Model loading and retention
+# Model Loading and Retention
 OLLAMA_KEEP_ALIVE=30m                      # Keep models loaded for 30 minutes
 OLLAMA_LOAD_TIMEOUT=600                    # 10 minutes timeout for large models
 OLLAMA_REQUEST_TIMEOUT=300                 # 5 minutes per request
 
-# CPU Optimization
-OMP_NUM_THREADS=10                         # Utilize all 10 CPU cores
-GOMP_CPU_AFFINITY=0-9                      # Pin threads to all cores
+# ===== CPU OPTIMIZATION =====
+# Threading - Utilize all 10 CPU cores
+OMP_NUM_THREADS=10                         # OpenMP threads
+GOMP_CPU_AFFINITY=0-9                      # Pin threads to all cores 0-9
 
-# Memory Management
+# ===== MEMORY MANAGEMENT =====
 MALLOC_ARENA_MAX=2                         # Reduce memory fragmentation
 
-# OLLAMA MODEL CONFIGURATION
-# These will be set automatically when models are loaded
-# OLLAMA_FLASH_ATTENTION=1                 # Enable if model supports it
-# OLLAMA_CONTEXT_SIZE=4096                 # Adjust based on available VRAM
+# ===== ADVANCED PERFORMANCE SETTINGS =====
+# Flash Attention - Reduces VRAM usage and improves speed
+OLLAMA_FLASH_ATTENTION=1                   # Enable flash attention for better memory efficiency
 
-# Note: IP whitelisting is configured directly in nginx/nginx.conf
+# Context Configuration - Optimized for 8GB VRAM
+OLLAMA_CONTEXT_SIZE=8192                   # 8K context (optimal for 7GB available VRAM)
+OLLAMA_BATCH_SIZE=512                      # Batch processing size
+
+# Additional Memory Optimizations
+OLLAMA_LOW_VRAM=false                      # Set to true if you encounter VRAM issues
+OLLAMA_GPU_LAYERS=-1                       # Load all layers to GPU (-1 = auto)
+OLLAMA_MAIN_GPU=0                          # Use first GPU
+OLLAMA_TENSOR_SPLIT=1.0                    # Use 100% of GPU 0
+
+# Model Loading Strategy
+OLLAMA_PRELOAD_MODEL=true                  # Preload model for faster inference
+OLLAMA_OFFLOAD_KQV=true                    # Offload KV cache to system RAM if needed
