--- a/example.env
+++ b/example.env
@@ -12,19 +12,15 @@ MAX_VRAM=7GB                               # Reserve 1GB VRAM for system overhea
 ENABLE_SIGNUP=true
 WEBUI_URL=https://ai.junder.uk
 
-# ===== DEFAULT ADMIN USER =====
-DEFAULT_USER_EMAIL=j@junder.uk
-DEFAULT_USER_NAME=jai
-DEFAULT_USER_PASSWORD=admin123
-
 # ===== RESOURCE LIMITS =====
 # Memory Management - Optimized for 32GB RAM
-OLLAMA_MEMORY_LIMIT=28G                    # Use 28GB of 32GB RAM
-OLLAMA_MEMORY_RESERVATION=20G              # Reserve 20GB minimum
+OLLAMA_MEMORY_LIMIT=24G                    # Use 24GB of 32GB RAM
+OLLAMA_MEMORY_RESERVATION=12G              # Reserve 12GB minimum
 
 # ===== STORAGE OPTIMIZATION =====
 # Set to SSD path for better I/O performance (optional)
 OLLAMA_DATA_PATH=/mnt/nvme/ollama_data
+WEBUI_DATA_PATH=/mnt/nvme/webui_data
 
 # ===== OLLAMA PERFORMANCE SETTINGS =====
 # Concurrent Processing
@@ -38,9 +34,9 @@ OLLAMA_LOAD_TIMEOUT=600                    # 10 minutes timeout for large models
 OLLAMA_REQUEST_TIMEOUT=300                 # 5 minutes per request
 
 # ===== CPU OPTIMIZATION =====
-# Threading - Utilize all 10 CPU cores
-OMP_NUM_THREADS=10                         # OpenMP threads
-GOMP_CPU_AFFINITY=0-9                      # Pin threads to all cores 0-9
+# Threading - Utilize all 6/10 CPU cores
+OMP_NUM_THREADS=6                         # OpenMP threads
+GOMP_CPU_AFFINITY=0-5                      # Pin threads to all cores 0-[5/9]
 
 # ===== MEMORY MANAGEMENT =====
 MALLOC_ARENA_MAX=2                         # Reduce memory fragmentation
@@ -51,7 +47,7 @@ OLLAMA_FLASH_ATTENTION=1                   # Enable flash attention for better m
 
 # Context Configuration - Optimized for 8GB VRAM
 OLLAMA_CONTEXT_SIZE=8192                   # 8K context (optimal for 7GB available VRAM)
-OLLAMA_BATCH_SIZE=512                      # Batch processing size
+OLLAMA_BATCH_SIZE=2048                      # Batch processing size
 
 # Additional Memory Optimizations
 OLLAMA_LOW_VRAM=false                      # Set to true if you encounter VRAM issues
