--- a/example.env
+++ b/example.env
@@ -34,9 +34,9 @@ OLLAMA_LOAD_TIMEOUT=600                    # 10 minutes timeout for large models
 OLLAMA_REQUEST_TIMEOUT=300                 # 5 minutes per request
 
 # ===== CPU OPTIMIZATION =====
-# Threading - Utilize all 6/10 CPU cores
-OMP_NUM_THREADS=6                         # OpenMP threads
-GOMP_CPU_AFFINITY=0-5                      # Pin threads to all cores 0-[5/9]
+# Threading - Utilize all 8/10 CPU cores
+OMP_NUM_THREADS=8                         # OpenMP threads
+GOMP_CPU_AFFINITY=0-9                      # Pin threads to all cores 0-9
 
 # ===== MEMORY MANAGEMENT =====
 MALLOC_ARENA_MAX=2                         # Reduce memory fragmentation
@@ -46,7 +46,7 @@ MALLOC_ARENA_MAX=2                         # Reduce memory fragmentation
 OLLAMA_FLASH_ATTENTION=1                   # Enable flash attention for better memory efficiency
 
 # Context Configuration - Optimized for 8GB VRAM
-OLLAMA_CONTEXT_SIZE=8192                   # 8K context (optimal for 7GB available VRAM)
+OLLAMA_CONTEXT_SIZE=4096                   # 8K context (optimal for 7GB available VRAM)
 OLLAMA_BATCH_SIZE=2048                      # Batch processing size
 
 # Additional Memory Optimizations
